--- a/echelle.html
+++ b/echelle.html
@@ -13,7 +13,7 @@
 </body>
 <script>
 
-    let data, urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityTotal.json";
+    let data, urlData = "https://github.com/belmalika/echelles/blob/main/synthese-fra.csv";
 
     d3.json(urlData).then(rs=>{
         data = rs;
