--- a/echelle.html
+++ b/echelle.html
@@ -19,7 +19,7 @@
         urlData = "data/fr-en-evaluations_nationales_6eme_region.csv",
         width = 600, height=100, widthLibTxt=100, svg,
         //pVal='cpx',pLib='dim',pFreq='nbCpx',
-        pVal='date',pLib='total des confirmes',pFreq='Ecart type',
+        pVal='date',pLib='total_cas_confirmes',pFreq='Ecart type',
         
         interpolates = false;
         /*{
