--- a/echelle.html
+++ b/echelle.html
@@ -16,9 +16,9 @@
 
     let data, 
         //urlData = "https://github.com/belmalika/echelles/edit/main/synthese-fra.csv",
-        urlData = "data/fr-en-evaluations_nationales_6eme_region.csv",
+       https://github.com/belmalika/echelles/blob/a3c514350b9235150de0ff89b704752dab2e6d49/synthese-fra.csv
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='Score moyen',valGroupe='Matière',valY='Ecart type',
+        valX='date',valGroupe='total_cas_confirmes',valY='total_deces_hopital',
         bandY,
         interpolates = false;
         /*{
