--- a/echelle.html
+++ b/echelle.html
@@ -15,10 +15,10 @@
     import {posiColor} from './modules/posiColor.js';
 
     let data, 
-        //urlData = "https://github.com/belmalika/echelles/edit/main/synthese-fra.csv",
-       https://github.com/belmalika/echelles/blob/a3c514350b9235150de0ff89b704752dab2e6d49/synthese-fra.csv
+        //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
+        urlData = "synthese-fra.csv",
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='date',valGroupe='total_cas_confirmes',valY='total_deces_hopital',
+        valX='date',valGroupe='total_cas_confirmes	',valY='total_deces_hopital',
         bandY,
         interpolates = false;
         /*{
