--- a/echelle.html
+++ b/echelle.html
@@ -16,7 +16,7 @@
 
     let data, 
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
-        urlData = "synthese-fra.csv",
+        urlData = "https://github.com/belmalika/echelles/blob/ca8cae9c98d2ae578aa1ee32a46cb8feef5efb73/synthese-fra.csv",
         width = 600, height=600, widthLibTxt=120, svg,  
         valX='date',valGroupe='total_cas_confirmes	',valY='total_deces_hopital',
         bandY,
