--- a/echelle.html
+++ b/echelle.html
@@ -16,9 +16,9 @@
 
     let data, 
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
-        urlData = "https://github.com/belmalika/echelles/blob/ca8cae9c98d2ae578aa1ee32a46cb8feef5efb73/synthese-fra.csv",
+        urlData = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRHmQOo_fC9wWhJyzjk-Nij2tVLvTkqTeQKylJEYIVf9N1l_-E6sQoJVZ5Kav9ccj3tiL3eqmeB3cog/pub?output=csv",
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='date',valGroupe='total_cas_confirmes	',valY='total_deces_hopital',
+        valX='Pays',valGroupe='Nombre de contaminations	',valY='Nombre de décès',
         bandY,
         interpolates = false;
         /*{
