--- a/echelle.html
+++ b/echelle.html
@@ -16,9 +16,9 @@
 
     let data, 
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
-        urlData = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRHmQOo_fC9wWhJyzjk-Nij2tVLvTkqTeQKylJEYIVf9N1l_-E6sQoJVZ5Kav9ccj3tiL3eqmeB3cog/pub?output=csv",
+        urlData = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4nz7YDfAaKthwERq77nB4YMuScl4DfguhUB3MLRT4a8hoZdB6TenxcWvc6SyrPyhTSvH4yoC0l1_Y/pub?output=csv",
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='Pays',valGroupe='Nombre de contaminations	',valY='Nombre de décès',
+        valX='date',valGroupe='total_cas_confirmes',valY='total_deces_hopital',
         bandY,
         interpolates = false;
         /*{
