--- a/echelle.html
+++ b/echelle.html
@@ -18,7 +18,7 @@
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
         urlData = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQ4nz7YDfAaKthwERq77nB4YMuScl4DfguhUB3MLRT4a8hoZdB6TenxcWvc6SyrPyhTSvH4yoC0l1_Y/pub?output=csv",
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='date',valGroupe='total_cas_confirmes',valY='total_deces_hopital',
+        valX='date',valGroupe='total_deces_hopital',valY='total_cas_confirmes',
         bandY,
         interpolates = false;
         /*{
