--- a/echelle.html
+++ b/echelle.html
@@ -18,7 +18,7 @@
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
         urlData = "Donnees.csv",
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='date',valGroupe='total_deces_hopital',valY='total_cas_confirmes',
+        valX='date',valGroupe='deces',valY='cas',
         bandY,
         interpolates = false;
         /*{
