--- a/echelle.html
+++ b/echelle.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Echelles statistiques</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <style>
+        #toolTip{
+            position: absolute;
+            display: none;
+            background-color: white;
+        }
+        .cercle{
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <div id="resultat"></div>
+<div id="toolTip"></div>
 
 </body>
 <script type="module">
@@ -18,9 +29,10 @@
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
         urlData = "Donnees.csv",
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='date',valGroupe='deces',valY='cas',
+        valX='date',valGroupe='deces',valY='Ecart type', valLibCercle = 'cas',
         bandY,
-        interpolates = false;
+        interpolates = false,
+        toolTip = d3.select("#toolTip");
         /*{
                 'Existence':d3.interpolateViridis,
                 'Physique':d3.interpolatePlasma,
@@ -53,7 +65,8 @@
                         //'scX':d3.scaleLog().domain(extX).range([widthLibTxt, width-widthLibTxt]),
                         //'scY':d3.scaleLog().domain(extY).range([0, bandY.bandwidth()])                        
                         'scX':d3.scaleLinear().domain(extX).range([widthLibTxt, width-widthLibTxt]),
-                        'scY':d3.scaleLinear().domain(extY).range([0, bandY.bandwidth()])
+                        'scY':d3.scaleLinear().domain(extY).range([0, bandY.bandwidth()]),
+                        'scColor':d3.scaleSequentialLog(extX, d3.interpolatePlasma)
                         };
                         o[valGroupe]=d[0];
                     return o;
@@ -79,19 +92,52 @@
                 .attr("height", height)
                 .attr("style", "max-width: 100%; height: auto;")
                 .style("font", "14px sans-serif"),
-            dim = svg.selectAll('g').data(data).enter().append("g")
+            groupe = svg.selectAll('g').data(data).enter().append("g")
                 .attr("transform",(d,i)=>`translate(0,${bandY(d[valGroupe])})`);
-            dim.append("text").text(d=>{
+            groupe.append("text").text(d=>{
                 return d[valGroupe]
             })
-            dim.append("g").attr("transform", (d,i)=>`translate(widthLibTxt,0)`).attr('id',(d,i)=>'axisX'+i)
+            //ajoute la légende des axes
+            groupe.append("text").text(valX).attr("transform", d=>`translate(${widthLibTxt},-20)`).attr("font-size","smaller");
+            groupe.append("text").text(valY).attr("transform", d=>`translate(${widthLibTxt},${bandY.bandwidth()+14})`).attr("font-size","smaller");
+            //ajoute les axes
+            groupe.append("g").attr("transform", (d,i)=>`translate(0,0)`).attr('id',(d,i)=>'axisX'+i)
                 .each((d,i)=>{
                     d3.select('#axisX'+i).call(d3.axisTop(d.scX));
                 })
-            dim.append("g").attr("transform", (d,i)=>`translate(${widthLibTxt},0)`).attr('id',(d,i)=>'axisY'+i)
+            groupe.append("g").attr("transform", (d,i)=>`translate(${widthLibTxt},0)`).attr('id',(d,i)=>'axisY'+i)
                 .each((d,i)=>{
                     d3.select('#axisY'+i).call(d3.axisLeft(d.scY));
                 })
+            let cercles = groupe.selectAll('.cercle').data(d=>d.vals.map(m=>{
+                    m.sclX=d.scX;
+                    m.sclY=d.scY;
+                    m.sclC=d.scColor;
+                    return m;
+                })).enter().append("g").attr('class','cercle')
+                .on('mouseenter',showToolTip)
+                .on('mouseleave',hideToolTip);
+            cercles.append('circle')
+                .attr("cx",d=>d.sclX(d[valX]))
+                .attr("cy",d=>d.sclY(d[valY]))
+                .attr('r','8')
+                .attr('fill',d=>d.sclC(d[valX]));
+            cercles.append('text')
+                .attr("x",d=>d.sclX(d[valX]))
+                .attr("y",d=>d.sclY(d[valY])+3)
+                .attr("font-size","smaller")
+                .attr("text-anchor","middle")
+                .text(d=>d[valLibCercle].substring(0,1));
+            
+    }
+    function showToolTip(e,d){
+        toolTip.style('display','block');
+        toolTip.style('left',d.sclX(d[valX])+'px');
+        toolTip.style('top',d.sclY(d[valY])+'px');
+        toolTip.text(JSON.stringify(d));
+    }
+    function hideToolTip(e,d){
+        toolTip.style('display','none');
     }
 
 </script>
