--- a/echelle.html
+++ b/echelle.html
@@ -29,7 +29,7 @@
         //urlData = "http://localhost/samszo/HDR/docs/assets/data/complexityFrequency.json",
         urlData = "Donnees.csv",
         width = 600, height=600, widthLibTxt=120, svg,  
-        valX='date',valGroupe='deces',valY='Ecart type', valLibCercle = 'cas',
+        valX='date',valGroupe='deces',valY='cas', valLibCercle = 'Région académique',
         bandY,
         interpolates = false,
         toolTip = d3.select("#toolTip");
